springboot-eks-project/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app
  labels:
    app.kubernetes.io/name: springboot-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: springboot-app
